# terranova

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  STYLE.md  Terranova.sln  cmake_install.cmake
prototype/: default.ini  terranova
prototype/data/: board.json  creatures.json  fortifications.json  houses.json  overworld.json
prototype/data/media/animations/: brainstem.ozz
prototype/data/media/animations/fox/: idle.ozz  run.ozz
prototype/data/media/animations/human/: backward.ozz  dance.ozz  diagonal_left.ozz  punch.ozz  slash.ozz
prototype/data/media/animations/miniature/: idle.ozz  run.ozz
prototype/data/media/models/: human.glb  sword.glb  teapot.glb
prototype/data/media/models/buildings/houses/: large.glb  medium.glb  medium_wide.glb  small.glb  temple.glb
prototype/data/media/models/buildings/walls/: gate.glb  segment_right.glb  tower.glb
prototype/data/media/models/miniature/: town_large.glb  town_medium.glb  town_small.glb  wall_large.glb  wall_medium.glb  wall_small.glb
prototype/data/media/models/primitives/: sphere.glb
prototype/data/media/skeletons/: fox.ozz
prototype/data/media/skeletons/miniature/: human.ozz
prototype/data/media/textures/board/: bump.dds  grass.dds  gravel.dds  rock.dds  sand.dds  snow.dds
prototype/debug/shapes/: cone.glb  cube.glb  cylinder.glb  icosphere.glb  plane.glb
prototype/media/models/: fox.glb
prototype/modules/native/: board.json  creatures.json  fortifications.json  hitboxes.json  houses.json
prototype/modules/native/media/animations/fox/: walk.ozz
prototype/modules/native/media/animations/human/: diagonal_right.ozz  dying.ozz  fall.ozz  falling.ozz  idle.ozz  left_strafe.ozz  right_strafe.ozz  run.ozz  strafe_left.ozz  strafe_right.ozz  walk.ozz
prototype/modules/native/media/models/: duck.glb  human.glb
prototype/modules/native/media/models/buildings/houses/: large.glb  medium.glb  medium_wide.glb  small.glb  temple_small.glb
prototype/modules/native/media/models/buildings/walls/: ramp.glb  segment.glb  segment_both.glb  segment_left.glb
prototype/modules/native/media/skeletons/: brainstem.ozz  human.ozz
prototype/modules/native/media/textures/terrain/: tiles.dds
prototype/shaders/: blur.comp  board.frag  creature.frag  creature.vert  culling.comp  debug.vert  font.frag  font.vert  label.frag  label.vert  object.frag  terrain.frag  terrain.tesc  terrain.tese  tilemap.frag  tilemap.tesc  tilemap.tese  tilemap.vert  triangle.frag  triangle.vert
src/: console.cpp  console.h  debugger.cpp  debugger.h  engine.cpp  engine.h  main.cpp  media.cpp  media.h  module.cpp  module.h
src/battle/: battle.cpp  battle.h  building.h  cadastre.cpp  cadastre.h  creature.cpp  creature.h  crowd.cpp  crowd.h  landscape.cpp  landscape.h  mold.cpp  mold.h  terrain.cpp  terrain.h
src/campaign/: atlas.cpp  atlas.h  board.cpp  board.h  campaign.cpp  campaign.h  entity.h  faction.cpp  faction.h  marker.cpp  marker.h  meeple.cpp  meeple.h  prompt.h  settlement.cpp  settlement.h  world.cpp  world.h
src/geom/: frustum.cpp  frustum.h  geom.h  transform.h
src/geometry/: frustum.cpp  frustum.h  geometry.h  transform.h  voronoi.cpp  voronoi.h
src/gpu/: mesh.cpp  mesh.h  model.cpp  model.h  scene.cpp  scene.h  shader.cpp  shader.h
src/graphics/: font.cpp  font.h  label.cpp  label.h  mesh.cpp  mesh.h  model.cpp  model.h  scene.cpp  scene.h  shader.cpp  shader.h  texture.cpp  texture.h
src/navigation/: astar.cpp  astar.h
src/physics/: bumper.cpp  bumper.h  heightfield.cpp  heightfield.h  physical.cpp  physical.h  ragdoll.cpp  ragdoll.h  trigger.cpp  trigger.h
src/util/: animation.cpp  animation.h  camera.cpp  camera.h  config.cpp  config.h  erode.cpp  erode.h  image.cpp  image.h  input.cpp  input.h  logger.cpp  logger.h  navigation.cpp  navigation.h  noise.cpp  noise.h  serialize.h
